fix wrap issue

--- a/new/client/pages/index.module.scss
+++ b/new/client/pages/index.module.scss
@@ -3,12 +3,163 @@
 .wrapper {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+
 }
 
 .log {
     display: flex;
     flex-direction: column;
-    height: 350px;
+    width: 100%;
+    height: 375px;
+
+    .login, .verify {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        width: 100%;
+        padding-top: 100px;
+        height: 70%;
+
+        .text {
+            font-size: 22px
+        }
+
+        //check if screen is small
+        .number {
+            display: flex;
+            margin-top: 12px;
+
+            /* @include common.center(); */
+            @media (max-width: 600px) {
+                flex-direction: column !important;
+                align-items: start !important;
+
+                .send {
+                    margin-top: 16px;
+                }
+            }
+
+            .space {
+                padding-left: 10px;
+            }
+
+            .digits {
+                text-decoration: none;
+                background-color: transparent !important;
+                color: white;
+                font-size: 18px;
+                border-radius: 6px;
+                border: 2px solid white;
+                margin-right: 10px;
+                height: 40px;
+            }
+
+            .digits:hover {
+                background-color: transparent !important;
+            }
+
+            .digits:focus {
+                outline: 0;
+            }
+
+            .dropdown {
+                background-color: transparent;
+                border: 2px solid white;
+            }
+
+            .dropdown:hover {
+                background-color: transparent;
+            }
+
+            .search {
+                outline: 0;
+                text-decoration: none;
+                background-color: #121212 !important;
+            }
+
+            .search:focus {
+                outline: 0;
+            }
+
+            .search:hover {
+                background-color: #121212;
+            }
+
+            .button {
+
+                outline: 0;
+                text-decoration: none;
+            }
+
+            .button:hover {
+                outline: 0;
+                text-decoration: none;
+            }
+
+            .button:focus {
+                outline: 0;
+                text-decoration: none;
+            }
+
+            .cont {
+                background-color: transparent;
+            }
+
+            .cont:hover {
+                background-color: transparent;
+            }
+
+            .country:hover {
+                background-color: #7a7a7a39 !important;
+            }
+
+            .country.highlight {
+                background-color: #7a7a7a39 !important;
+            }
+
+            .send {
+                height: 40px;
+                width: 70px;
+                min-width: 70px;
+                background-color: white;
+                color: black;
+                font-size: 18px;
+                border-radius: 6px;
+                border: 2px solid white;
+                cursor: pointer;
+                @include c.center();
+            }
+        }
+
+        .error {
+            margin-top: 12px;
+            color: #bf616a;
+            font-size: 14px;
+        }
+    }
+
+    .messages {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        width: 100%;
+        padding-top: 0px;
+        padding-bottom: 20px;
+        height: 30%;
+        font-size: 12px;
+
+        .failed {
+            color: rgb(165, 0, 0);
+            margin-bottom: 12px;
+            word-wrap: normal;
+        }
+
+        .help {
+            color: aqua;
+            word-wrap: normal;
+        }
+    }
 }
 
 .info {
@@ -28,151 +179,8 @@
     }
 }
 
-.login, .verify {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    width: 100%;
-    padding-top: 100px;
-    height: 70%;
 
-    .text {
-        font-size: 22px
-    }
 
-    //check if screen is small
-    .number {
-        display: flex;
-        margin-top: 12px;
-
-        /* @include common.center(); */
-        @media (max-width: 600px) {
-            flex-direction: column !important;
-            align-items: start !important;
-
-            .send {
-                margin-top: 16px;
-            }
-        }
-
-        .space {
-            padding-left: 10px;
-        }
-
-        .digits {
-            text-decoration: none;
-            background-color: transparent !important;
-            color: white;
-            font-size: 18px;
-            border-radius: 6px;
-            border: 2px solid white;
-            margin-right: 10px;
-            height: 40px;
-        }
-
-        .digits:hover {
-            background-color: transparent !important;
-        }
-
-        .digits:focus {
-            outline: 0;
-        }
-
-        .dropdown {
-            background-color: transparent;
-            border: 2px solid white;
-        }
-
-        .dropdown:hover {
-            background-color: transparent;
-        }
-
-        .search {
-            outline: 0;
-            text-decoration: none;
-            background-color: #121212 !important;
-        }
-
-        .search:focus {
-            outline: 0;
-        }
-
-        .search:hover {
-            background-color: #121212;
-        }
-
-        .button {
-
-            outline: 0;
-            text-decoration: none;
-        }
-
-        .button:hover {
-            outline: 0;
-            text-decoration: none;
-        }
-
-        .button:focus {
-            outline: 0;
-            text-decoration: none;
-        }
-
-        .cont {
-            background-color: transparent;
-        }
-
-        .cont:hover {
-            background-color: transparent;
-        }
-
-        .country:hover {
-            background-color: #7a7a7a39 !important;
-        }
-
-        .country.highlight {
-            background-color: #7a7a7a39 !important;
-        }
-
-        .send {
-            height: 40px;
-            width: 70px;
-            min-width: 70px;
-            background-color: white;
-            color: black;
-            font-size: 18px;
-            border-radius: 6px;
-            border: 2px solid white;
-            cursor: pointer;
-            @include c.center();
-        }
-    }
-
-    .error {
-        margin-top: 12px;
-        color: #bf616a;
-        font-size: 14px;
-    }
-}
-
-.messages {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    /* width: 100%; */
-    padding-top: 20px;
-    height: 30%;
-
-    .failed {
-        color: rgb(165, 0, 0);
-        margin-bottom: 12px;
-        word-wrap: normal;
-    }
-
-    .help {
-        color: aqua;
-        word-wrap: normal;
-    }
-}
 
 //overides
 .country:hover {
